<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="here_are_my_widgets">Here are my widgets:</string>
    <string name="check_this_out">Check this out!</string>
    <string name="type_your_answer_in_here">Type your answer in here</string>
    <string name="button">Button</string>
    <string name="switch_on_off">Switch on / off</string>
    <string name="button_linear">Button</string>
    <string name="check_this_out_linear">Check this out!</string>
    <string name="switch_on_off_linear">Switch on / off</string>
    <string name="type_your_answer_in_here_linear">Type your answer in here</string>
    <string name="here_are_my_widgets_grid">Here are my widgets:</string>
    <string name="button_grid">Button</string>
    <string name="switch_on_off_grid">Switch on/ off</string>
    <string name="type_your_answer_in_here_grid">Type your answer in here</string>
    <string name="check_this_out_grid">Check this out!</string>
    <string name="here_are_my_widgets_linear">Here are my widgets:</string>
    <string name="emailText">Enter you email address</string>
    <string name="type_email_here">Type email here</string>
    <string name="type_your_password">Type your password:</string>
    <string name="login">LOGIN</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_the_button_above_to_take_a_picture">Click the button above to take a picture</string>
    <string name="go_to_chat">Go to chat</string>
    <string name="editText">type here</string>
    <string name="receive">RECEIVE</string>
    <string name="send">SEND</string>
    <string name="detele_this_message">DETELE THIS MESSAGE</string>
</resources>
