<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/here_are_my_widgets"
        android:textSize="30sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/button"
        android:layout_width="188dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_toStartOf="@id/imageButton"
        android:text="@string/button"
        android:textAlignment="center" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/textView"
        android:src="@drawable/flag"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_this_out"
        android:layout_weight="1"
        android:gravity="fill"
        android:layout_below="@id/imageButton"/>

    <Switch
        android:layout_width="219dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageButton"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:text="@string/switch_on_off" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_your_answer_in_here"
        android:layout_below="@id/checkBox"/>
</RelativeLayout>