<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/List"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ButtonSend"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"></ListView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonSend"
        android:text="@string/send"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:id="@+id/EditText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/List"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="0dp"
        android:layout_toLeftOf="@+id/ButtonReceive"
        android:layout_toRightOf="@+id/ButtonSend"
        android:hint="@string/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonReceive"
        android:text="@string/receive"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>





</RelativeLayout>
